# NNRuntime

./: CMakeLists.txt  README.md  test.cpp
core/: CMakeLists.txt  common.hpp  md5.hpp  nn.hpp  nn.test.hpp  profile.sh  quantization.hpp  test.cpp
core/cuda/: CMakeLists.txt  MatrixVectoryMultiplier.cuh  test.cu
core/gpu/: CMakeLists.txt  mvm.cu  mvm.h  test.cu
gpu/: CMakeLists.txt  mvm .h  mvm.cu  mvm.cuh  mvm.h  test.cu
include/: nn.h  nn.hpp
jni/: CMakeLists.txt  nn_runtime.cpp  nn_runtime.h  nn_runtime.i  test.cpp  test.java
tools/: CMakeLists.txt  import_theano_model.hpp  test.cpp  tool_import_theano_model.cpp
